--- a/css/main.css
+++ b/css/main.css
@@ -6977,7 +6977,7 @@ label.panel-block {
   padding: 3rem 1.5rem 6rem; }
 
 .header-image {
-  background-image: url("https://lh3.googleusercontent.com/LIy4NWJekg3RuWomNulKYeJy70OmTeCRwrmQx-5YYqpG2CgAl5LGWPTvs875p9WnRsaTZQnVTysEpa7L0n3hp_0qyMcjeXhgYA_iU7XL8lRPbL9BFH4HZdqMfDoMyf36BAEAqWK1XM8kCiZ8llcfCoPL1nptO9DoaDWOCgfAU6LpiTaW2VEU6PozKT0URXuKNKi9Z4ZXls9kISStijTyR7geU-xmKmzRJbJGgci2PjsSKbOvCYmEVAhQCd6M3DA7uQYop1oIjzQmcs1Zi1Ho6PgAsLc31KKtbG87to4UofmQ2kxhcq4JYJA-see2k-jFOZBtWnBuWNDACF1QgMcoHFMjkpTUcxlLkoeIgQhLSpueZP3hzJVArxL0re6K6_U_0u175tRHH1n3xXlcJykNPMyTk1H7B1T9-3_N3wsXJa2TRnTtzsSgOkQtDLN0BPrn8a8QMMn8lnrZLKd5SNNOni3NlzFW2ZkHjrrYS2teYpljYYwN-vaIa1nrHf4p8nT2xlgzFk3Bhf7k0P28ATkk8ssc5vk1vOtzvQvbtLFlQ5TgDpxo-m1KXoPKhBpw33qjIiN9ykKriS4_U89jGuE3fcq5igls9piP-VjjT1oy7sqTZ3oKnNpsJarJJ2g0zD8INhfGhePEFi5rT6pOlxcpMluKewZ26O3fK17fE3ax1u7fuir29z-DkjUl=w1266-h949-no");
+  background-image: url("https://lh3.googleusercontent.com/MJAMOK_70uBEwr4Ohd3ZDEidc5cJvVxTrDTwpjYEIxiEAzhhqvjqgcaNIhx6ba__k3P8lYeWEo5YwG5bxeedkyIW6JL9_w9TaAawPGMMavVkj7ylwV9Mux89b34dNN1_2cf3Det51gfFkFj5AwYfYQR6OUyPe7m-emurC22S4FTaIbyNdeLwt21p7nvZS2RVnyfXop5xXDapWJT5kPqNQ4fr4IC2hE_OpDXNjDpYqra-5hz9eVJVs7lqoDyhwCScoIaMIev3kgtrKjaE8AITWMMA7Z28GUa5p6k1JLIq8excIq6RBaMG4exWDpQwzGnPJnIyoInZjb-3ltj2jQd0oRsAZ8phxljsd-UYFTBuxk0IIh4qZ2_KT7os3C-soLGzw8l4lzOi-awig0NJtvTgq85a3KJHelXD1NxKnn0YAykF-g_iE-UFtNhgJeBYXQ0sFLHgYWxS8KpsQS15HAXZwYAp2hx_ndnOXA9dBGjsNJEJf542haTlSOh9GDUm1T3CANeQSX3xnqtNpeaMXHX98Zep5bTMqC8xmZlUbqoMlnK6c_7kiPRO4sKpD6vKbqPp2wABieU4PKnajXi-9Ur6NEBjkJ3Ox1xigsslXavp3FQEvCnKh1drP7EhDF9PtXFEkLc4sn9u8KFW2LtcMAZ_LbBDLxA4S2X3MxZx3uBQMyOXJMvXQJJdBV0T=w1920-h1080-no");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -6996,7 +6996,7 @@ label.panel-block {
   background-color: rgba(0, 0, 0, 0.7); }
 
 .darken-30 {
-  background-color: rgba(0, 0, 0, 0.3); }
+  background-color: rgba(0, 0, 0, 0.3) !important; }
 
 .darken-20 {
   background-color: rgba(0, 0, 0, 0.2); }
@@ -7042,3 +7042,9 @@ label.panel-block {
 .cards-max {
   max-width: 800px;
   margin: 0 auto; }
+
+.no-bottom-margin {
+  margin-bottom: 0 !important; }
+
+.section {
+  padding-top: 4rem; }
