--- a/css/main.css
+++ b/css/main.css
@@ -7049,7 +7049,15 @@ label.panel-block {
   height: 450px; }
 
 .rsvp-en {
-  height: 1350px; }
+  height: 1250px; }
+
+@media only screen and (max-width: 767px) {
+  .rsvp-en {
+    height: 1500px; } }
+
+@media only screen and (min-width: 768px) {
+  .rsvp-en {
+    height: 1250px; } }
 
 .cards-max {
   max-width: 800px;
