--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -27,22 +27,23 @@ $primary-invert: $pink-invert;
 */
 
 @import "../node_modules/bulma/bulma";
-@media only screen and (max-width: 767px) {
-    .header-image {
-      /* The file size of this background image is 93% smaller
-         to improve page load speed on mobile internet connections */
-      background-image: url(https://lh3.googleusercontent.com/ZNiEMTVKXnYktZxfcmnRkHDJI6I2xIjanQtM352Z9tBer7aX6uyYKXQViFT9x6ZehcXyCqkPAeBxNbm-K6EuKBc9dfz41039wQOwn7rDojmdw_5f9f4Dk6ciG9Na4YjzJI3oH6fH1E8=w768-no);
-    }
+html {
+    scroll-behavior: smooth;
 }
 @media only screen and (max-width: 1023px) {
     .header-image {
         /* The file size of this background image is 93% smaller
             to improve page load speed on mobile internet connections */
-        background-image: url(https://lh3.googleusercontent.com/ZNiEMTVKXnYktZxfcmnRkHDJI6I2xIjanQtM352Z9tBer7aX6uyYKXQViFT9x6ZehcXyCqkPAeBxNbm-K6EuKBc9dfz41039wQOwn7rDojmdw_5f9f4Dk6ciG9Na4YjzJI3oH6fH1E8=w1024-no);
+        background-image: url(https://lh3.googleusercontent.com/ZNiEMTVKXnYktZxfcmnRkHDJI6I2xIjanQtM352Z9tBer7aX6uyYKXQViFT9x6ZehcXyCqkPAeBxNbm-K6EuKBc9dfz41039wQOwn7rDojmdw_5f9f4Dk6ciG9Na4YjzJI3oH6fH1E8=w1024-c);
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .header-image {
+        background-image: url("https://lh3.googleusercontent.com/ZNiEMTVKXnYktZxfcmnRkHDJI6I2xIjanQtM352Z9tBer7aX6uyYKXQViFT9x6ZehcXyCqkPAeBxNbm-K6EuKBc9dfz41039wQOwn7rDojmdw_5f9f4Dk6ciG9Na4YjzJI3oH6fH1E8=w1200-c");
     }
 }
 .header-image {
-    background-image: url("https://lh3.googleusercontent.com/ZNiEMTVKXnYktZxfcmnRkHDJI6I2xIjanQtM352Z9tBer7aX6uyYKXQViFT9x6ZehcXyCqkPAeBxNbm-K6EuKBc9dfz41039wQOwn7rDojmdw_5f9f4Dk6ciG9Na4YjzJI3oH6fH1E8=w1200-no");
+    background-image: url("https://lh3.googleusercontent.com/ZNiEMTVKXnYktZxfcmnRkHDJI6I2xIjanQtM352Z9tBer7aX6uyYKXQViFT9x6ZehcXyCqkPAeBxNbm-K6EuKBc9dfz41039wQOwn7rDojmdw_5f9f4Dk6ciG9Na4YjzJI3oH6fH1E8=w768-c");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -69,6 +70,15 @@ $primary-invert: $pink-invert;
 }
 .darken-10 {
     background-color: rgba(0,0,0,0.1);
+}
+
+.navbar-burger {
+    color: whitesmoke;
+}
+
+#navbarMenuHeroC.navbar-menu {
+    background-color: rgba(0,0,0,0.5);
+    text-align: center;
 }
 
 .fancy {
@@ -141,3 +151,247 @@ $primary-invert: $pink-invert;
     position: absolute;
     right: 35px;
 }
+
+.semitransparent {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.sky-background {
+    background-color: #85b9dd;
+}
+.sky-background .title {
+    color: #E5F3FC;
+}
+.sky-background.section {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.relative-position {
+    position: relative;
+}
+
+.fullwidth {
+    width: 100%;
+}
+
+.frame {
+    width: 500px;
+    height: auto;
+    margin: 15% auto 0;
+    position: absolute;
+    width: 100%;
+    left: -1.5rem;
+}
+  
+.sky-background svg {
+    max-width: 100%;
+    height: auto;
+    display: block;
+  }
+  
+  /**
+   * Paper Plane
+   */
+  /*Paper Plane: Container*/
+  .plane-container {
+    width: 200px;
+    margin: 0px auto;
+    z-index: 3;
+  }
+   /*Paper Plane: Image*/
+  .plane {
+    width: 100%;
+    height: 60px;
+  }
+  
+  /*Paper Plane: Animation*/
+  .plane-container {
+    -webkit-animation: paper-plane-scoping 2s alternate infinite;
+    -moz-animation: paper-plane-scoping 2s alternate infinite;
+    animation: paper-plane-scoping 2s alternate infinite;
+  
+    -webkit-animation-timing-function: linear;
+    -moz-animation-timing-function: linear;
+    animation-timing-function: linear;
+  }
+  
+  @-webkit-keyframes paper-plane-scoping {
+    0% {
+      -webkit-transform: translateY(0px);
+      -moz-transform: translateY(0px);
+      transform: translateY(0px);
+    }
+    100% {
+      -webkit-transform: translateY(100px);
+      -moz-transform: translateY(100px);
+      transform: translateY(100px);
+    }
+  }
+  
+  .plane {
+    -webkit-animation-timing-function: ease-in-out;
+    -moz-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  
+    -webkit-animation: paper-plane-soaring 4s forwards infinite;
+    -moz-animation: paper-plane-soaring 4s forwards infinite;
+    animation: paper-plane-soaring 4s forwards infinite;
+  }
+  @-webkit-keyframes paper-plane-soaring {
+    0% {
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    40% {
+      -webkit-transform: rotate(15deg);
+      -moz-transform: rotate(15deg);
+      transform: rotate(15deg);
+    }
+    50% {
+      -webkit-transform: rotate(15deg);
+      -moz-transform: rotate(15deg);
+      transform: rotate(15deg);
+    }
+    60% {
+      -webkit-transform: rotate(-10deg);
+      -moz-transform: rotate(-10deg);
+      transform: rotate(-10deg);
+    }
+    70% {
+      -webkit-transform: rotate(-10deg);
+      -moz-transform: rotate(-10deg);
+      transform: rotate(-10deg);
+    }
+    100% {
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+  }
+  
+  /**
+   * Clouds
+   */
+  .clouds {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    transform: translateZ(0);
+  }
+  
+  .cloud {
+    position: absolute;
+    top: 20%;
+    width: 300px;
+    right: 0;
+    opacity: 1;
+  }
+  
+  .cloud.front {
+    z-index: 9;
+  }
+  
+  .cloud.distant {
+    z-index: 1;
+  }
+  
+  .cloud.background {
+    z-index: 1;
+  }
+  
+  /*Cloud Sizing*/
+  .cloud.smaller {
+    margin-right: 400px;
+    width: 100px;
+    margin-top: 50px;
+  }
+  
+  .cloud.small {
+    margin-right: 200px;
+    width: 150px;
+  }
+  
+  .cloud.big {
+    width: 500px;
+    margin-top: 50px;
+    margin-right: 150px;
+  }
+  
+  .cloud.massive {
+    width: 600px;
+    margin-top: 20px;
+    margin-right: 0px;
+  }
+  
+  
+  /*Cloud: Animation*/
+  .cloud {
+    -webkit-animation-name: cloud-movement;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-direction: forwards;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-duration: 8s;
+  
+    -moz-animation-name: cloud-movement;
+    -moz-animation-timing-function: linear;
+    -moz-animation-direction: forwards;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-duration: 8s;
+  
+    animation-name: cloud-movement;
+    animation-timing-function: linear;
+    animation-direction: forwards;
+    animation-iteration-count: infinite;
+    animation-duration: 8s;
+  }
+  
+  .slow {
+    -webkit-animation-duration: 9.2s;
+    -moz-animation-duration: 9.2s;
+    animation-duration: 9.2s;
+  }
+  
+  .slower {
+    -webkit-animation-duration: 11.2s;
+    -moz-animation-duration: 11.2s;
+    animation-duration: 11.2s;
+  }
+  
+  .slowest {
+    -webkit-animation-duration: 13.5s;
+    -moz-animation-duration: 13.5s;
+    animation-duration: 13.5s;
+  }
+  
+  .super-slow {
+    -webkit-animation-duration: 20.5s;
+    -moz-animation-duration: 20.5s;
+    animation-duration: 20.5s;
+  }
+  
+  @-webkit-keyframes cloud-movement {
+    0% {
+      opacity: 0.1;
+      -webkit-transform: translateX(300px);
+      -moz-transform: translateX(300px);
+      transform: translateX(300px);
+    }
+    10% {
+  
+      opacity: 0.7;
+    }
+    90% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+      -webkit-transform: translateX(-1000px);
+      -moz-transform: translateX(-1000px);
+      transform: translateX(-1000px);
+    }
+  }
