--- a/css/main.css
+++ b/css/main.css
@@ -7024,6 +7024,10 @@ html {
   background-color: rgba(0, 0, 0, 0.5);
   text-align: center; }
 
+@media only screen and (min-width: 1024px) {
+  #navbarMenuHeroC.navbar-menu {
+    background-color: inherit; } }
+
 .fancy {
   font-family: 'Great Vibes', cursive; }
 
