--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -128,6 +128,9 @@ html {
 .rsvp-en {
     height: 1250px;
 }
+.rsvp-is {
+    height: 1350px;
+}
 
 @media only screen and (max-width: 767px) {
     .rsvp-en {
